--- a/Student/Student/InfoPlist.xcstrings
+++ b/Student/Student/InfoPlist.xcstrings
@@ -693,6 +693,12 @@
             "value" : "写真やビデオをメッセージやディスカッションの投稿に添付するか、課題の提出に入れます。"
           }
         },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "사진 및 동영상을 메시지 및 토론 게시물에 첨부하거나 과제물로 제출합니다."
+          }
+        },
         "mi" : {
           "stringUnit" : {
             "state" : "translated",
@@ -955,6 +961,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "あなたの近くの学校を見つけられるよう手を貸してください。"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "주변의 학교를 찾는 것을 도와주세요."
           }
         },
         "mi" : {
@@ -1221,6 +1233,12 @@
             "value" : "オーディオ録音をメッセージやディスカッションの投稿に添付するか、課題の提出に入れます。"
           }
         },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "오디오 녹음을 메시지 및 토론 게시물에 첨부하거나 과제물로 제출합니다."
+          }
+        },
         "mi" : {
           "stringUnit" : {
             "state" : "translated",
@@ -1485,6 +1503,12 @@
             "value" : "写真やビデオをメッセージやディスカッションの投稿に添付するか、課題の提出に入れます。"
           }
         },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "사진 및 동영상을 메시지 및 토론 게시물에 첨부하거나 과제물로 제출합니다."
+          }
+        },
         "mi" : {
           "stringUnit" : {
             "state" : "translated",
@@ -1747,6 +1771,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "写真やビデオをメッセージやディスカッションの投稿に添付するか、課題の提出に入れます。"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "사진 및 동영상을 메시지 및 토론 게시물에 첨부하거나 과제물로 제출합니다."
           }
         },
         "mi" : {
