--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -96492,6 +96492,7 @@
       }
     },
     "Profile Menu, Closed" : {
+      "comment" : "Accessibility text describing the Profile Menu button and its state",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
