--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -116312,7 +116312,11 @@
         }
       }
     },
+    "Submission & Feedback" : {
+
+    },
     "Submission & Rubric" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
