--- a/Parent/Parent/Localizable.xcstrings
+++ b/Parent/Parent/Localizable.xcstrings
@@ -21478,7 +21478,11 @@
         }
       }
     },
+    "Submission & Feedback" : {
+
+    },
     "Submission & Rubric" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
