[MBL-19532][S] Learner Dashboard - Course Invitations (#3873)
refs: MBL-19532
builds: Student
affects: Student, Teacher, Parent
release note: none

--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -15374,6 +15374,12 @@
         }
       }
     },
+    "Accept" : {
+
+    },
+    "Accepted invitation to %@" : {
+
+    },
     "Access Denied" : {
       "comment" : "Access Denied from the server",
       "extractionState" : "manual",
@@ -38647,6 +38653,12 @@
         }
       }
     },
+    "Course Invitations" : {
+
+    },
+    "Course Invitations (%lld)" : {
+
+    },
     "Course Syllabus" : {
       "comment" : "Title for Course Syllabus view controller",
       "extractionState" : "manual",
@@ -41316,6 +41328,12 @@
           }
         }
       }
+    },
+    "Decline" : {
+
+    },
+    "Declined invitation to %@" : {
+
     },
     "Delete" : {
       "comment" : "Button to confirm deleting folders\n   Button to delete a discussion entry\n   Confirm deletion of discussion entry",
@@ -55830,6 +55848,12 @@
           }
         }
       }
+    },
+    "Failed to accept invitation. Please try again." : {
+
+    },
+    "Failed to decline invitation. Please try again." : {
+
     },
     "Feeling stuck? Everyone hits walls, just don't stop climbing." : {
 
@@ -151552,6 +151576,9 @@
           }
         }
       }
+    },
+    "You have been invited" : {
+
     },
     "You must first complete:" : {
       "comment" : "prerequisites for unlocking item",
