Add details screen

--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -41073,6 +41073,9 @@
         }
       }
     },
+    "Date" : {
+
+    },
     "Days Before" : {
       "localizations" : {
         "ar" : {
@@ -75528,6 +75531,9 @@
           }
         }
       }
+    },
+    "Message" : {
+
     },
     "Message everyone separately, or add everyone to a group conversation?" : {
       "extractionState" : "manual",
